--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       content="Play the color game and improve your understanding of RGB colors."
     />
 
-    <link rel="stylesheet" href="assets/styles.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
 
     <title>Color Game</title>
   </head>
@@ -52,6 +52,6 @@
 
     <footer></footer>
 
-    <script src="assets/index.js"></script>
+    <script src="./assets/main.js"></script>
   </body>
 </html>
