--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Game</title>
+    <link rel="stylesheet" href="./assets/style.css" />
 </head>
 <body>
     <h1>The RGB Color Guessing Game
@@ -27,6 +28,8 @@
 		<div class="square"></div>
 		<div class="square"></div>
 	</div>
+
+    <script src="./assets/main.js"></script>
 </body>
 </html>
 <!-- <!DOCTYPE html>
